# OCR_Benchmark_PY

./: .env.example  .gitignore  pyproject.toml
dashboard/pages/: 1_Performance_Metrics.py  2_Test_Result.py
dashboard/utils/: data_loader.py
ocr_benchmark/: __init__.py  __main__.py
ocr_benchmark/evaluation/: __init__.py  json.py
ocr_benchmark/models/: __init__.py  base.py  gemini.py  openai.py
ocr_benchmark/models/shared/: __init__.py  token_cost.py
ocr_benchmark/models/shared/prompts/: __init__.py  image_extraction_system_prompt.txt  json_extraction_system_prompt.txt  ocr_system_prompt.txt
ocr_benchmark/results/2026-01-11-08-11-07/: results.json
ocr_benchmark/results/2026-01-11-18-00-48/: results.json
ocr_benchmark/results/2026-01-11-18-22-45/: results.json
ocr_benchmark/results/2026-01-11-18-36-36/: results.json
ocr_benchmark/results/2026-01-11-18-37-53/: results.json
ocr_benchmark/types/: data.py  model.py
ocr_benchmark/utils/: __init__.py  data_loader.py  file.py  logs.py  zod.py
tests/: conftest.py  debug_arr.py  run_json_tests.py  test_cli.py  test_model_provider.py  test_openai_json_extraction.py  test_openai_schema.py
tests/evaluation/: test_json_diff.py
