[project]
name = "ocr-benchmark"
version = "0.0.1"
requires-python = ">=3.13"
description = "OCR Benchmark"
readme = "README.md"
license = { text = "ISC" }
keywords = ["OCR", "Benchmark", "LLM"]

dependencies = [
    "google-genai>=1.57.0",
    "openai>=2.15.0",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "plotly>=6.5.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
    "streamlit>=1.52.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "pytest>=9.0.2",
    "ruff>=0.14.11",
]
